# Tmux-Orchestrator

./: .gitignore  BMAD_PROJECT_DOCUMENTATION.md  DENO_FRESH_BEST_PRACTICES.md  DEPLOYMENT_GUIDE.md  README.md  REFACTORING_SUMMARY.md  TMUX_UTILS_MIGRATION_GUIDE.md  claude_auto_responder.py  claude_limit_monitor.py  enable_auto_responder.sh  integrated_auto_responder.py  permission_presets.py  project.md  project_spec.md  pyproject.toml  reactivation_audio_player.py  requirements.txt  start_auto_responder.sh  test_continue_command_verification.py  test_reactivation_audio.py  test_search_form.py  test_tmux_exceptions.py  timing_log.txt  tmux_utils.py
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.claude/commands/: disable-auto.md  enable-auto.md
.github/workflows/: ci.yml
antko-corporate/: CRITICAL_INCIDENT_REPORT.md  CRM_PROJECT_REQUIREMENTS.md  INCIDENT_RESOLUTION_REPORT.md  build_css.ts  deno.json  dev_with_css.ts  fresh.config.ts  fresh.gen.ts  security-guard.ts  tailwind.config.ts  watch_css.ts
antko-corporate/components/: AdminLayout.tsx  Button.tsx  CRMDashboard.tsx  CRMLayout.tsx  Card.tsx  CustomerCard.tsx  DataTable.tsx  FormField.tsx  Hero.tsx  Layout.tsx  LeadCard.tsx  LeadManagementInterface.tsx  (+2 more)
bmad-medicina-backend/: DEPLOYMENT_GUIDE.md  INTEGRATION_SUCCESS.md  README.md  deno.json
bmad-medicina-frontend/: COMPREHENSIVE_VALIDATION_REPORT.md  DEPLOYMENT_GUIDE.md  INTEGRATION_STATUS.md  LIVE_INTEGRATION_REPORT.md  TESTING_STANDARDS.md  deno.json  deno.test.json  fresh.gen.ts
docs/: ci-cd-philosophy.md  permission-systems-guide.md
jimbo-landing/: fresh.gen.ts
nar-designs-landing/: data.db  deno.json  fresh.config.ts  fresh.gen.ts  tailwind.config.js
reactivation_audio/: README.md
(+175 files in other folders)
